inclusão da pagina pegue-e-monte

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <body>
     <header>
-        <h1>Mel Decorações</h1>
+        <h1><a href="index.html" class="link-index">Mel Decorações</a></h1>
         <nav>
             <a href="#">Festas Completas</a>
-            <a href="#">Pegue-e-Monte</a>
+            <a href="peguemonte.html">Pegue-e-Monte</a>
             <a href="#">Aluguel de Brinquedos</a>
             <a href="#">Contato</a>
         </nav>
@@ -32,7 +32,7 @@
             </div>
 
             <div class="content">
-                <div class="imagem"><a href="#"><img src="imagens/pegue_e_monte_pq.jpg" alt=""  class="menu-item"></a></div>
+                <div class="imagem"><a href="peguemonte.html"><img src="imagens/pegue_e_monte_pq.jpg" alt=""  class="menu-item"></a></div>
                 <div class="texto"><h2>Pegue-e-Monte</h2></div>
             </div>
             
