formatações de layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1><a href="index.html" class="link-index">Mel Decorações</a></h1>
+        <h1>Mel Decorações</h1>
         <nav>
             <a href="#">Festas Completas</a>
             <a href="peguemonte.html">Pegue-e-Monte</a>
