--- a/peguemonte.html
+++ b/peguemonte.html
@@ -29,7 +29,7 @@
                 <div class="imagem"><a href="#"><img src="imagens/400x400.jpeg" alt="" class="menu-item"> </a></div>
             </div>
             <div class="content">
-                <div class="imagem"><a href="peguemonte.html"><img src="imagens/400x400.jpeg" alt=""  class="menu-item"></a></div>
+                <div class="imagem"><a href="#"><img src="imagens/400x400.jpeg" alt=""  class="menu-item"></a></div>
             </div>
         
             <div class="content">
