acrescentando as paginas 'festa completa', 'aluguel de brinquedos' e 'contato'

--- a/festacompleta.html
+++ b/festacompleta.html
@@ -8,15 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <title>Pegue-e-Monte</title>
+    <title>Festas Completas</title>
 </head>
 <body>
     <header>
         <h1><a href="index.html" class="link-index">Mel Decorações</a></h1>
-        <h2>Pegue-e-Monte</h2>
+        <h2>Festa Completa</h2>
         <nav>
-            <a href="festacompleta.html">Festas Completas</a>
-            <a href="#">Pegue-e-Monte</a>
+            <a href="#">Festas Completas</a>
+            <a href="peguemonte.html">Pegue-e-Monte</a>
             <a href="aluguel.html">Aluguel de Brinquedos</a>
             <a href="#">Contato</a>
         </nav>
