--- a/aluguel.html
+++ b/aluguel.html
@@ -8,16 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <title>Pegue-e-Monte</title>
+    <title>Aluguel de Brinquedos</title>
 </head>
 <body>
     <header>
         <h1><a href="index.html" class="link-index">Mel Decorações</a></h1>
-        <h2>Pegue-e-Monte</h2>
+        <h2>Aluguel de Brinquedos</h2>
         <nav>
             <a href="festacompleta.html">Festas Completas</a>
-            <a href="#">Pegue-e-Monte</a>
-            <a href="aluguel.html">Aluguel de Brinquedos</a>
+            <a href="peguemonte.html">Pegue-e-Monte</a>
+            <a href="#">Aluguel de Brinquedos</a>
             <a href="#">Contato</a>
         </nav>
     </header>
