ajustes na pagina 'contato'

--- a/aluguel.html
+++ b/aluguel.html
@@ -18,7 +18,7 @@
             <a href="festacompleta.html">Festas Completas</a>
             <a href="peguemonte.html">Pegue-e-Monte</a>
             <a href="#">Aluguel de Brinquedos</a>
-            <a href="#">Contato</a>
+            <a href="contato.html">Contato</a>
         </nav>
     </header>
     
