--- a/peguemonte.html
+++ b/peguemonte.html
@@ -18,7 +18,7 @@
             <a href="festacompleta.html">Festas Completas</a>
             <a href="#">Pegue-e-Monte</a>
             <a href="aluguel.html">Aluguel de Brinquedos</a>
-            <a href="#">Contato</a>
+            <a href="contato.html">Contato</a>
         </nav>
     </header>
     
