--- a/festacompleta.html
+++ b/festacompleta.html
@@ -18,7 +18,7 @@
             <a href="#">Festas Completas</a>
             <a href="peguemonte.html">Pegue-e-Monte</a>
             <a href="aluguel.html">Aluguel de Brinquedos</a>
-            <a href="#">Contato</a>
+            <a href="contato.html">Contato</a>
         </nav>
     </header>
     
