inclusão de imagens da pagina 'pegue-e-monte' e link da pagina 'contato'

--- a/contato.html
+++ b/contato.html
@@ -24,9 +24,11 @@
     
     <main>
         <div class="contato">
-            <h2 class="contato-item"><img src="imagens/whatsapp.png" alt="">  37-99999-9999</h2>
-            <h2 class="contato-item"><img src="imagens/whatsapp.png" alt="">  37-99999-9999</h2>
-            <h2 class="contato-item"><img src="imagens/logotipo-do-instagram.png" alt="">  @meldecoracoes</h2>
+            <h2 class="contato-item"><img src="imagens/whatsapp.png" alt="">
+            <a href="https://wa.me/5537999449097" target="
+            ">Contato 01</a></h2>
+            <h2 class="contato-item"><img src="imagens/whatsapp.png" alt=""><a href="https://wa.me/5537999686233" target="_blank">Contato 02</a></h2>
+            <h2 class="contato-item"><img src="imagens/logotipo-do-instagram.png" alt="">  <a href="https://www.instagram.com/mel.decoracao2019/" target="_blank">@meldecoracoes</a></h2>
         </div>
     </main>
 
