--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             
             <div class="content">
-                <div class="imagem"><a href="#"><img src="imagens/contato_pq.jpg" alt="" class="menu-item"></a></div>
+                <div class="imagem"><a href="contato.html"><img src="imagens/contato_pq.jpg" alt="" class="menu-item"></a></div>
                 <div class="texto"><h2>Contato</h2></div>
             </div>
         </div>
